2006-05-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/physical-line.el: initial checkin

	* perso/paredit.el: update to newest beta

2006-05-29  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (org-config): load by default
	trigger (org-agenda-list) at startup
	(file-exists-p): absolute filenames in non-local config is *bad* :)

	* config/planner-config.el (kbd): move keybindings to config file

	* config/org-config.el: initial checkin.

	* config/calendar-config.el: disable those useless holidays
	(diary-cyclic-bounded): small variation of diary-cyclic

2006-05-05  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tempo-c++.el (c-mode-common-hook): use common hook

	* perso/paredit.el: initial checkin

	* dotemacs.el: various fixes

	* config/lisp-config.el (paredit-mode): activate paredit-mode

2006-03-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el: persistant scratch buffer

	* dotemacs-cust.el (custom-set-variables): recursive minibuffer rocks, emacs is now more paranoid about local variables

2006-03-07  Yann Hodique  <Yann.Hodique@lifl.fr>

	* icicles/: mirror icicles project here

2006-03-03  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn.el: new version of psvn.el

	* config/ido-config.el (ido): change-context (PVS) uses read-file-name

2006-02-09  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/scroll-in-place.el: initial checkin

2006-01-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el (try): macro for failing silently during arbitrary code invocation
	(request): rewrite request using try

	* perso/mycode.el (ffap-c-path): search in "standard" local directories

	* dotemacs.el (request): make savehist optional for old config
	(current-configuration): define configuration for theorem proving
	(request): make type-break optional

	* config/ido-config.el (request): make ido optional for old config

2005-12-14  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el (c-guess-basic-syntax): no need to redefine it anymore