@@ -20,7 +20,7 @@
  '(bbdb-complete-name-allow-cycling t)
  '(bbdb-dwim-net-address-allow-redundancy t)
  '(blink-cursor-mode nil nil (frame))
- '(browse-url-browser-function (quote w3m-browse-url))
+ '(browse-url-browser-function (quote browse-url-firefox))
  '(browse-url-netscape-program "mozilla-firefox")
  '(c++-font-lock-extra-types (quote ("Q[a-zA-Z]*" "uint" "ulong" "string")))
  '(c-default-style (quote ((java-mode . "java") (other . "personal"))))
@@ -167,10 +167,6 @@
  '(temp-buffer-resize-mode t)
  '(tempo-insert-region nil)
  '(tempo-interactive t)
- '(tla-number-of-dead-process-buffer 0)
- '(tla-switch-to-buffer-mode (quote single-window))
- '(tla-tips-enabled nil)
- '(tla-use-arrow-keys-for-navigation nil)
  '(tool-bar-mode nil nil (tool-bar))
  '(tooltip-frame-parameters (quote ((name . "tooltip") (internal-border-width . 1) (border-width . 0))))
  '(tooltip-gud-tips-p t)
